# tblfaker

./: .travis.yml  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
examples/: tblfaker_examples.ipynb
requirements/: requirements.txt  test_requirements.txt
tblfaker/: __init__.py  __version__.py  _common.py  _tblfaker.py
test/: _common.py  test_faker.py  test_tblfaker.py
