[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.black]
exclude = '''
.eggs/
| .git/
| .tox/
| .venv/
| _build/
| build/
| dist/
| _sandbox/
| docs/conf.py
| setup.py
'''
line-length = 100

[tool.isort]
include_trailing_comma = true
known_third_party = [
  'pytablewriter',
  'pytest',
]
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
  '*/.eggs/*',
  '*/.pytype/*',
  '*/.tox/*',
]

[tool.coverage.run]
branch = true
source = ['tblfaker']

[tool.coverage.report]
exclude_lines = [
  'except ImportError',
  'raise NotImplementedError',
  'pass',
  'ABCmeta',
  'abstractmethod',
  'abstractproperty',
  'abstractclassmethod',
  'warnings.warn',
]
precision = 1
show_missing = true

[tool.pytest.ini_options]
testpaths = [
  "test",
]

md_report = true
md_report_color = "auto"
md_report_verbose = 0

discord_verbose = 1
